fixed wrapping issue for text around image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,9 +117,9 @@ main img {
 
 article{
     width:90%;
-    padding-right:0px;
+    padding:1rem;
     /* font-size:1.5vw; */
-    overflow:scroll;
+    /* overflow:scroll; */
 }
 
 h1{
